force-app/main/default/objects/ssot__ClinicalEncounter__dlm/fields/ssot__rel_1723127913564_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1723127913564_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ClinicalEncounter_DestinationFacilit_rel</label>
    <referenceTo>ssot__HealthcareFacility__dlm</referenceTo>
    <relationshipLabel>ClinicalEncounter_DestinationFacilit_rel</relationshipLabel>
    <relationshipName>rel_1723127913564_end</relationshipName>
    <type>Lookup</type>
</CustomField>