force-app/main/default/objects/ssot__ClinicalEncounter__dlm/fields/ssot__rel_1723128545797_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1723128545797_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ClinicalEncounter_PreviousLocationId_rel</label>
    <referenceTo>ssot__Location__dlm</referenceTo>
    <relationshipLabel>ClinicalEncounter_PreviousLocationId_rel</relationshipLabel>
    <relationshipName>rel_1723128545797_end</relationshipName>
    <type>Lookup</type>
</CustomField>